--- a/python/demo.html
+++ b/python/demo.html
@@ -3,5 +3,5 @@
 <body>
 <p class="title"><b>The demo python introduces several python courses.</b></p>
 <p class="course">Python is a wonderful general-purpose programming language. You can learn Python from novice to professional by tracking the following courses:
-<a href="http://www.jianshu.com/nb/11366912 class="py1" id="link1">Basic Python</a> and <a href="http://www.jianshu.com/u/c3ea87d65161" class="py2" id="link2">Advanced Python</a>.</p>
+<a href="http://www.jianshu.com/nb/11366912 class="py1" id="link1">Python Crawler</a> .</p>
 </body></html>
